package or;

option java_outer_classname = "ObjectRecords";

import "SegmentLocationRecord.proto";
import "BPlusTreeRecords.proto";
import "SchemaKeyRecords.proto";
import "LockInfoRecord.proto";

/*
 * Versioning related info
 */
message VersionInfo {
    // version related operation type
    enum OperationType {
        NEW = 0;        // new version creation
        MARKER = 1;     // delete marker
        REMOVE = 2;     // remove a specific version
        UPDATE = 3;     // update a specific version
    }

    required OperationType type = 1;

    // true if this is a null id version, only present if is NEW or MARKER type
    optional bool isNullId = 2;

    // the version removed by an update, only present if is REMOVE type
    optional uint64 removedVersion = 3;

    // when the version removal happened, only present if is REMOVE type
    optional uint64 removedTime = 4;

    // the version get updated, only present if is UPDATE type
    optional uint64 updatedVersion = 5;
}

message SystemMetadata {
    required string key = 1;
    // only 1 or the other
    optional string value = 2;
    optional bytes binaryValue = 3;
}

message HeadSystemMetadata {
    required string key = 1;
    optional string value = 2;

    optional bool isDeleted = 3;
}

message UserMetadata {
    required string key = 1;
    // TODO: possibly add a type field to ensure only one of these is set
    optional bool isDeleted = 2;
    optional string textValue = 3;
    optional bytes  binaryValue = 4;
    optional bool skipDare = 5  [default = false];
}

message DataRange {
    // The '-1' value of the objectOffset means the data offset in the
    // object is unknown. The process needs to construct the full mapping
    // by reading the latest index file and scanning the update files (the
    // latest index version ~ the latest update version).
    required int64 objectOffset = 1 [default = -1];

    // object data length
    // -1 value for objectLength means the data segment length is unknown.
    // The actual data segment length is determined by reading the size of the
    // file being pointed to and adjusting for the file offset.
    required uint64 objectLength = 2;
}

message DataIndex {
    // updated object segment
    required DataRange dataRange = 1;

    // location of the object segment
    // if segment location is null, the object data is stored in the same file along
    // with the the metadata record (UMR/IMR).
    // TODO: enforce these constraints in the code
    optional SegmentLocation segmentLocation = 2;

    // the priority for this data
    required int64 segmentPriority = 3 [default = -1];

    // if isValid is false then it indicates a hole
    optional bool isValid = 4 [default = true];
}

message LockIndex {
    // Range for the lock
    required ByteRange lockRange = 1;
    required LockInfo lock = 2;
}

message LockIndexRecord {
    required ByteRange lockRange = 1;
    repeated LockIndex lockIndices = 2;
    optional bool hasMoreLockIndices = 3 [default = false];
}

/*
 * The metadata record in the index file, include all system
 * metadata, user metadata and data indices.
 * SS: Too bad GPB doesn't do message type inheritance, otherwise IMR could be a
 * derivative of UMR
 */
message IndexMetadataRecord {

    repeated SystemMetadata sysMd = 1;
    optional bool hasMoreSysMd = 2 [default = false];

    repeated UserMetadata userMd = 3;
    optional bool hasMoreUserMd = 4 [default = false];

    // IndexMetadataRecord may contain at most one of the following:
    // * One data index and no SegmentLocation -- object data is stored inline in the
    //   index file
    // * A list of data indices, each with valid SegmentLocation -- each index
    //   points to a file that contains an object data segment
    // * BPlusTreeRecord -- pointer to the root of a BPlusTree structured data indices.
    //   Note that BPlusTree structured indices are not planned for the near term, and
    //   will be implemented in a later release.
    // If the object does not contain any data, the IndexMetadataRecord will not
    // contain any of the above.
    // TODO: if BPlusTree is not in the horizon for object index maintanance,
    // TODO: we can combine IMR and UMR
    repeated DataIndex dataIndices = 5;
    optional bool hasMoreDataIndices = 6 [default = false];

    // if any of the above booleans is true, then reposIMRLocation contains the list of
    // SegmentLocations of the record written to file
    repeated SegmentLocation reposIMRLocations = 7;

    optional BPlusTreeRecord bPlusTreeRecord = 8;

    // Possibly updated head system metadata in the index file
    repeated HeadSystemMetadata headSysMd = 9;
    optional bool hasMoreHeadSysMd = 10 [default = false];


    // List of indices pointing to locks for this update
    repeated LockIndex lockIndices = 11;
    optional bool hasMoreLockIndices = 12 [default = false];
}

message SystemMetadataSet {
    repeated SystemMetadata sysMd = 1;
    required bool hasMoreMetadata = 2 [default = false];
    repeated SegmentLocation repoFileLocations = 3;
}

message UserMetadataSet {
    repeated UserMetadata userMd = 1;
    required bool hasMoreMetadata = 2 [default = false];
    repeated SegmentLocation repoFileLocations = 3;
}

message HeadMetadataSet {
    repeated HeadSystemMetadata headMd = 1;
    required bool hasMoreMetadata = 2 [default = false];
    repeated SegmentLocation repoFileLocations = 3;
}

// This is used to serialize all the overflow metadata into repo file.
message MetadataSet {
    repeated HeadSystemMetadata headMd = 1;
    repeated SystemMetadata sysMd = 2;
    repeated UserMetadata userMd = 3;
}

// This is used to record the process.
// We need to execute the following in sequence:
// 1. update metadata and index range entries.
// 2. update compaction marker.
// 3. insert jobs to delete deprecated entries.
// Use sfixed64 to make overflow calculation simpler.
message CompactionMarker {
    enum MarkerVersionType {
        version22 = 0;
    }

    required sfixed64 lastIndexedSequence = 1;

    // Sorted version history, from the latest to the oldest
    // We keep the version history here so that when the last version
    // of the object is removed, we know which one is the (new) current version.
    repeated sfixed64 versionHistoryDesc = 2;

    // nullVersionStartSequence is used to track the start sequence number of the
    // latest null sequence.
    // If there is a null version before version 1 and then we suspended versioning and
    // create a new null version, we need to update this field so that the next read
    // will not load indexes for the old null version.
    optional sfixed64 nullVersionStartSequence = 3;

    // In case there are lots of versions, this entry can overflow to repo chunks.
    repeated SegmentLocation repoFileLocations = 4;

    optional MarkerVersionType markerVersion = 5;
}

message VersionHistory {
    repeated sfixed64 versions = 1;
}

/*
 * The metadata record in the update file.
 *
 * The update file format:
 *   The following metadata record size, 4 bytes (int).
 *   Metadata record.
 *   Data.
 */
message UpdateMetadataRecord {

    // Possibly updated system metadata in the update file
    repeated SystemMetadata sysMd = 1;
    optional bool hasMoreSysMd = 2 [default = false];

    // Possibly updated user metadata in the update file
    repeated UserMetadata userMd = 3;
    optional bool hasMoreUserMd = 4 [default = false];

    // List of indices pointing to data segments that correspond to this update
    repeated DataIndex dataIndices = 5;
    optional bool hasMoreDataIndices = 6 [default = false];

    // if any of the above booleans is true, or if the request contains inline data
    // that is written to repository file, then reposUMRLocations contains the list of
    // SegmentLocations of the record written to file
    repeated SegmentLocation reposUMRLocations = 7;

    // Possibly updated head system metadata in the update file
    repeated HeadSystemMetadata headSysMd = 8;
    optional bool hasMoreHeadSysMd = 9 [default = false];


    // List of indices pointing to locks for this update
    repeated LockIndex lockIndices = 10;
    optional bool hasMoreLockIndices = 11 [default = false];
}

message CrossReferenceRecord {
    required string versionId = 1;
    optional int64 startOffset = 2;
}

message CleanupJobRecord {
    // The segmentLocation to add negative reference
    repeated SegmentLocation segmentLocation = 1;

    // The last journal region for OB table, at the time of IC
    optional DTRecordKey lastJournalRegion = 2;

    repeated int64 offsetInObjectForSegments = 3;
    
    // Optional field for remove LS entry job.
    // Keypool can be deleted/recreated so we record this at the time of object deletion.
    optional string keypoolOwnerZone = 4;
}

message DeleteAllIndicesJobRecord {
    // The last journal region for OB table, at the time of IC
    optional DTRecordKey lastJournalRegion = 1;
    optional int64 objectSize = 2;
}

// Object delta record for metering purpose
message ObjectDeltaRecord {
    required string namespace = 1;
    required string keypool = 2;
    required int64 bytesRemoved = 3;
    required bool isDelete = 4;

    // Timestamp when IC runs.
    // This is used by metering IC collector to skip entries that are alrady processed.
    required int64 icTimestamp = 5;
}

// Aggregated Object delta record for metering purpose
message AggregatedObjectDeltaRecord {
    required int64 bytesRemoved = 1;
    required int64 objDeleted = 2;
}

message ObjectSegmentReference {
    required string objectId = 1;

    required string versionId = 2;

    repeated SegmentLocation segmentLocations = 3;

    optional string bucketId = 4;

    optional string parentOid = 5;

    optional string objectName = 6;
}

message RefTableRebuildTaskValue {
    enum Status {
        SCHEDULED = 1;
        DONE = 2;
    }

    required Status status = 1;
    optional SchemaKey checkpoint = 2;
    // last journal region of scanned OB
    optional DTRecordKey lastJournalRegion = 3;
    //A zone where lastJournalRegion field was set
    optional string zone = 4;

    optional bool isFailed = 5 [default = true];

    optional int32 version = 6 [default = 0];
}

message ReconcileTaskValue {
    // the max cleanup job timestamp in index store,
    // used for remove reconcile task
    optional int64 cleanupJobTime = 1;

    // last journal region of index store,
    // used for remove reconcile task
    optional DTRecordKey lastJournalRegion = 2;

    // cleanup job added for conflict part, not present means false
    optional bool conflictCleaned = 3;
}

message ListableTagPayload {
    repeated UserListableTags userTags = 1;
    optional bool forDelete = 2;
}

message UserListableTags {
    required string userId = 1;
    repeated ListableTagEntry tags = 2;
}

message ListableTagEntry {
    required string key = 1;
    optional string value = 2;
}

message ListableTagUpgradeFSToken {
    required SchemaKey token = 1;

    optional string ownerZone = 2;
}

message ListableTagUpgradeLSTaskValue {
    // LS listing trigger and flag
    required bool isFinished = 1;

    // keypool full name
    required string keypoolFullName = 2;

    // LS KP listing token
    optional SchemaKey scanKPToken = 3;

    // LS FS listing token
    repeated ListableTagUpgradeFSToken scanFSToken = 4;
}

message ListableTagUpgradeRTTaskProgress {
    required int64 numAllBuckets = 1;
    required int64 numUpgradedBuckets = 2;
    required SchemaKey scannerToken = 3;
}

message ListableTagUpgradeRTTaskValue {
    // RT scan flag
    required bool isFinished = 1;

    // RT scan progress
    optional ListableTagUpgradeRTTaskProgress scanProgress = 2;
}
